Correct width of hero images on narrow viewports

--- a/website/src/atomic-ui/IdeaCard.module.css
+++ b/website/src/atomic-ui/IdeaCard.module.css
@@ -18,8 +18,8 @@
     border-bottom: 1px solid #aaa;
   }
   .cardImage {
-    margin-left: -4vw;
-    margin-right: -4vw;
+    margin-inline: -4vw;
+    width: auto;
   }
 }
 
