--- a/website/src/productIdeas/ui/Details.module.css
+++ b/website/src/productIdeas/ui/Details.module.css
@@ -38,8 +38,8 @@
     padding: 4vw;
   }
   .heroImage {
-    margin-left: -4vw;
-    margin-right: -4vw;
+    margin-inline: -4vw;
+    width: auto;
   }
 }
 @media screen and (min-width: 601px) {
